5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1758_1576.log
== SUBMITION (2019-05-23 10:49:27) 
-- CODE:
from numpy import *
v1 = array(eval(input("Jogada de Eusapia: ")))
v2 = array(eval(input("Jogada de Barsanulfo: ")))
i = 0
e = 0
b = 0
while((v1 == 11 or v1 == 22 or v1 == 33) and (v2 == 11 or v2 == 22 or v2 == 33):
	#v1 = array(eval(input("Jogada de Eusápia: ")))
	#v2 = array(eval(input("Jogada de Barsanulfo: ")))
	if(v1[i] == 11 and v2[i] == 22):
		b = b + 1
	elif(v2[i] == 11 and v1[i] == 22):
		e = e + 1
	elif(v1[i] == 22 and v2[i] == 33):
		b = b + 1
	elif(v2[i] == 22 and v1[i] == 33):
		e = e + 1
	elif(v1[i] == 33 and v2[i] == 11):
		b = b + 1
	elif(v2[i] == 33 and v1[i] == 11):
		e = e + 1
	i = i + 1
if(b < e):
	print(i)
	print("EUSAPIA")
elif(b > e):
	print(i)
	print("BARSANULFO")
elif(b == e):
	print(i)
	print("EMPATE")
		

-- EXECUTION TIME:
0.159246
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 7
    while((v1 == 11 or v1 == 22 or v1 == 33) and (v2 == 11 or v2 == 22 or v2 == 33):
                                                                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:50:34) 
-- CODE:
from numpy import *
v1 = array(eval(input("Jogada de Eusapia: ")))
v2 = array(eval(input("Jogada de Barsanulfo: ")))
i = 0
e = 0
b = 0
while(i < size(v1) and i < size(v2)):
	#v1 = array(eval(input("Jogada de Eusápia: ")))
	#v2 = array(eval(input("Jogada de Barsanulfo: ")))
	if(v1[i] == 11 and v2[i] == 22):
		b = b + 1
	elif(v2[i] == 11 and v1[i] == 22):
		e = e + 1
	elif(v1[i] == 22 and v2[i] == 33):
		b = b + 1
	elif(v2[i] == 22 and v1[i] == 33):
		e = e + 1
	elif(v1[i] == 33 and v2[i] == 11):
		b = b + 1
	elif(v2[i] == 33 and v1[i] == 11):
		e = e + 1
	i = i + 1
if(b < e):
	print(i)
	print("EUSAPIA")
elif(b > e):
	print(i)
	print("BARSANULFO")
elif(b == e):
	print(i)
	print("EMPATE")
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:50:37) 
-- CODE:
from numpy import *
v1 = array(eval(input("Jogada de Eusapia: ")))
v2 = array(eval(input("Jogada de Barsanulfo: ")))
i = 0
e = 0
b = 0
while(i < size(v1) and i < size(v2)):
	#v1 = array(eval(input("Jogada de Eusápia: ")))
	#v2 = array(eval(input("Jogada de Barsanulfo: ")))
	if(v1[i] == 11 and v2[i] == 22):
		b = b + 1
	elif(v2[i] == 11 and v1[i] == 22):
		e = e + 1
	elif(v1[i] == 22 and v2[i] == 33):
		b = b + 1
	elif(v2[i] == 22 and v1[i] == 33):
		e = e + 1
	elif(v1[i] == 33 and v2[i] == 11):
		b = b + 1
	elif(v2[i] == 33 and v1[i] == 11):
		e = e + 1
	i = i + 1
if(b < e):
	print(i)
	print("EUSAPIA")
elif(b > e):
	print(i)
	print("BARSANULFO")
elif(b == e):
	print(i)
	print("EMPATE")
		

-- EXECUTION TIME:
0.612587
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
